--- a/templates/base.html
+++ b/templates/base.html
@@ -5,7 +5,7 @@
         <meta http-equiv="X-UA-Compatible" content="IE=edge">
         <meta name="viewport" content="width=device-width, initial-scale=1">
         <meta name="description" content="">
-        <meta name="author" content="Jorge Hernández">
+        <meta name="author" content="">
 
         <title>Nivea :: {% block page_title %}Beta{% endblock%}</title>
         {% load static %}
