--- a/templates/base.html
+++ b/templates/base.html
@@ -114,7 +114,7 @@
                           <i class="fa fa-user fa-fw"></i> {{ user.username }} <b class="caret"></b>
                         </a>
                         <ul class="dropdown-menu dropdown-user">
-                            <li><a href="#"><i class="fa fa-user fa-fw"></i>Perfil</a></li>
+                            <li><a href="/perfil/"><i class="fa fa-user fa-fw"></i>Perfil</a></li>
                             <!--li><a href="#"><i class="fa fa-gear fa-fw"></i> Settings</a></li-->
                             <li class="divider"></li>
                             <li><a href="/logout/"><i class="fa fa-sign-out fa-fw"></i>Logout</a></li>
