--- a/templates/login.html
+++ b/templates/login.html
@@ -38,7 +38,7 @@
                             <form role="form" method="POST">
                                 <fieldset>
                                     <div class="form-group">
-                                        <input class="form-control" placeholder="E-mail" name="username" type="text" autofocus>
+                                        <input class="form-control" placeholder="User" name="username" type="text" autofocus>
                                     </div>
                                     <div class="form-group">
                                         <input class="form-control" placeholder="Password" name="password" type="password" value="">
