--- a/web/templates/evaluacion.html
+++ b/web/templates/evaluacion.html
@@ -95,11 +95,11 @@
 
       r_lables.push('Total');
       r_data.push({{ evaluacion.get_calificacion.total }});
-      r_colors.push({% if evaluacion.get_calificacion.class == 'success' %}'#d4edda'{% elif evaluacion.get_calificacion.class == 'warning' %}'#fff3cd'{% else %}'#f8d7da'{% endif%});
+      r_colors.push({% if evaluacion.get_calificacion.class == 'success' %}'#008000'{% elif evaluacion.get_calificacion.class == 'warning' %}'#ffff00'{% else %}'#ff0000'{% endif%});
       {% for resultado in evaluacion.get_resultados %}
       r_lables.push('{{ resultado.competencia.nombre|title }}');
       r_data.push({{ resultado.total }});
-      r_colors.push({% if resultado.class == 'success' %}'#d4edda'{% elif resultado.class == 'warning' %}'#fff3cd'{% else %}'#f8d7da'{% endif%});
+      r_colors.push({% if resultado.class == 'success' %}'#008000'{% elif resultado.class == 'warning' %}'#ffff00'{% else %}'#ff0000'{% endif%});
       {% endfor %}       
 
       var myChart = new Chart(ctx, {
