--- a/web/templates/evaluacion.html
+++ b/web/templates/evaluacion.html
@@ -130,7 +130,7 @@
                     for (var i = 0; i < dataset.data.length; i++) {
                       for(var key in dataset._meta){
                         var model = dataset._meta[key].data[i]._model;
-                        ctx.fillText(" " + dataset.data[i], model.x, model.y - 5);
+                        ctx.fillText(" " + dataset.data[i] + "%", model.x, model.y - 5);
                       }
                     }
                   });
