--- a/web/templates/evaluacion_list.html
+++ b/web/templates/evaluacion_list.html
@@ -31,12 +31,9 @@ th.rotated-text > div > span {
     <thead>
       <tr>
           <th>ID</th>
+          <th>Calificación</th>
           <th>Creado</th>
           <th>Persona</th>
-          <th>Edad</th>
-          <th>Sexo</th>
-          <th>Escolaridad</th>
-          <th>Localidad</th>
           {% for competencia in competencias %}
           <th class="rotated-text" scope="col"><div><span>{{ competencia.nombre|title }}</span></div></th>
           {% endfor %}
@@ -48,16 +45,19 @@ th.rotated-text > div > span {
       {% for evaluacion in object_list %}
       <tr>
         <td>{{ evaluacion.id }}</td>
+        <td style="{% if evaluacion.get_calificacion.total > 0 %}color:{% if evaluacion.get_calificacion.class == 'success' %}#008000{% elif evaluacion.get_calificacion.class == 'warning' %}#ffff00{% else %}#ff0000{% endif %};{% endif %}">
+          {% if evaluacion.get_calificacion.total > 0 %}
+            {{ evaluacion.get_calificacion.nivel }}
+          {% else %}
+            Sin resultado
+          {% endif %}
+        </td>
         <td>{{ evaluacion.fecha|date:'d/m/Y' }}</td>
         <td>{{ evaluacion.nombre_persona }}</td>
-        <td>{{ evaluacion.edad }}</td>
-        <td>{{ evaluacion.get_sexo_abr }}</td>
-        <td>{{ evaluacion.get_escolaridad }}</td>
-        <td>{{ evaluacion.localidad }}</td>
         {% for resultado in evaluacion.get_resultados %}
-        <td class="{{ resultado.class }}">{{ resultado.total }}</td>
+        <td class="{% if resultado.total > 0%}{{ resultado.class }}{% endif %}">{{ resultado.total }}</td>
         {% endfor %}
-        <td class="{{ evaluacion.get_calificacion.class }}">{{ evaluacion.get_calificacion.total }}</td>
+        <td class="{% if evaluacion.get_calificacion.total > 0 %}{{ evaluacion.get_calificacion.class }}{% endif %}">{{ evaluacion.get_calificacion.total }}</td>
         <td>
           <a href="/evaluaciones/v/{{ evaluacion.id }}/" class="btn btn-primary btn-circle noprint"><i class="fa fa-folder-open"></i></a>
           <!--a href="/evaluaciones/e/{{ evaluacion.id }}/" class="btn btn-primary btn-circle noprint"><i class="fa fa-edit"></i></a-->
