--- a/templates/base.html
+++ b/templates/base.html
@@ -20,9 +20,11 @@
         <!-- Morris Charts CSS -->
         <link href="{% static "css/morris.css" %}" rel="stylesheet">
         <!-- Custom Fonts -->
+        <link href="{% static "css/auto-complete.css" %}" rel="stylesheet" type="text/css">
         <link href="{% static "css/font-awesome.min.css" %}" rel="stylesheet" type="text/css">
         <!-- jQuery -->
         <script src="{% static "js/jquery.min.js" %}"></script>
+        <script src="{% static "js/auto-complete.min.js" %}"></script>
         <!-- ChartJS -->
         <script type="text/javascript" src="https://cdn.jsdelivr.net/npm/chart.js@2.9.3/dist/Chart.min.js"></script>
         
